--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -31,21 +31,36 @@
 {{ blog_content | safe }}
 <blockquote>
     <p>
-        <strong><nobr>Wow, you made it to the end!</nobr></strong>
-        Let me know what you thought on <a href="https://mastodon.social/@sethmlarson" target="_blank">Mastodon</a> or <a href="https://bsky.app/profile/sethmlarson.dev" target="_blank">Bluesky</a>. <nobr>Get notified of new posts</nobr> by subscribing to the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or <a href="https://buttondown.email/sethmlarson">email newsletter</a>.
-    <form
-      action="https://buttondown.email/api/emails/embed-subscribe/sethmlarson"
-      method="post"
-      target="popupwindow"
-      onsubmit="window.open('https://buttondown.email/sethmlarson', 'popupwindow')"
-    >
-        <input type="email" name="email" id="bd-email" placeholder="Email address here" style="max-width: 100%; width: 16em; margin-bottom: 0.5em; margin-right: 1em;" required/>
-        <input type="submit" value="Subscribe" style="max-width: 100%; width: 8em;"/>
-    </form>
-    </p>
-    <p>
-        <strong>Want more content now?</strong> This <a href="/blog">blog's archive</a> has {{ total_blog_count }} ready-to-read articles. I also curate
-        a <a href="/links">list of link</a> I find on the internet.
+        <strong><em><nobr id="wow-you-made-it">Wow, you made it to the end!</nobr></em></strong> <nobr>...and you're thinking, what now?</nobr>
+        <br>
+        <ul style="margin-left: -20px;">
+    <li>Share your thoughts on <a href="https://mastodon.social/@sethmlarson" target="_blank">Mastodon</a>, <a href="mailto:sethmichaellarson@gmail.com">email</a>, or <a href="https://bsky.app/profile/sethmlarson.dev" target="_blank">Bluesky</a>.</li>
+    <li>Follow this blog on <a href="{{ url_for('rss_blog_posts') }}">RSS</a> or the <a href="https://buttondown.email/sethmlarson">email newsletter</a>.</li>
+    <li>Browse this <a href="/blog">blog’s archive</a> of {{ total_blog_count }} entries.</li>
+    <li>Check out this <a href="/links">list of cool stuff</a> I found on the internet.</li>
+    <li>Go outside (best option)</li>
+</ul>
     </p>
 </blockquote>
+<script>
+function wavifyText(elId, text){
+    let el = document.getElementById(elId);
+    el.innerHTML = text
+    .split("")
+    .map(letter => {
+      return `<span>` + letter + `</span>`;
+    })
+    .join("");
+
+    Array.from(el.children).forEach((span, index) => {
+    setTimeout(() => {
+      span.classList.add("wavy");
+    }, (index + 1) * 100);
+    });
+};
+
+(function () {
+  wavifyText("wow-you-made-it", "Wow, you made it to the end!");
+})();
+</script>
 {% endblock %}
